# Specify.AI

./: .env.template  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: lint.yml  test.yml
directives/: _template.md
execution/: _template.py
plan/action-plans/: design-doc-generator.md  implementation-plan-generator.md
plan/rules/: app-flow-doc.md  design-doc.md  implementation-plan.md  technical-architecture-doc.md
plans/: cli-flags-implementation-plan.md  consistency-enhancement-plan.md  explicit-provider-registration-refactoring-plan.md  interactive-onboarding-design.md  keymanager-new-methods-implementation-plan.md  sprint1-setup-plan.md  sprint2-api-key-encryption-plan.md  sprint2-api-key-storage-plan.md  sprint2a-api-key-storage-plan.md  sprint3a-llm-abstraction-layer-plan.md  sprint3b-ollama-provider-implementation-plan.md
plans/action-plans/: app-flow-doc-generator.md  bdd-generator.md  prd-generator.md  technical-architecture-doc-generator.md
plans/implementation/: implementation-plan.md
plans/rules/: bdd.md  prd.md
specify/: __init__.py  cli.py  py.typed
specify/analysis/: __init__.py
specify/context/: __init__.py  deterministic.py  extractor.py  llm_extractor.py  models.py  normalizer.py  registry.py
specify/core/: __init__.py  key_manager.py
specify/generators/: __init__.py
specify/providers/: __init__.py  base.py  ollama.py
specify/rules/: __init__.py
specify/utils/: __init__.py
tests/: __init__.py  conftest.py  test_cli.py  test_key_manager.py  test_metadata.py
tests/test_context/: __init__.py  test_deterministic.py  test_extractor.py  test_llm_extractor.py  test_models.py  test_normalizer.py  test_registry.py
tests/test_providers/: __init__.py  conftest.py  test_base.py  test_ollama.py
