# ─────────────────────────────────────────────────────────────────────────────
# Specify.AI - Project Configuration
# ─────────────────────────────────────────────────────────────────────────────

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

# ─────────────────────────────────────────────────────────────────────────────
# Project Metadata
# ─────────────────────────────────────────────────────────────────────────────

[project]
name = "specify-ai"
version = "0.1.0"
description = "Local-first CLI tool that transforms a single prompt into five production-ready documents using AI"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Specify.AI Team"}
]
keywords = [
    "ai",
    "cli",
    "documentation",
    "llm",
    "ollama",
    "openai",
    "anthropic",
    "prd",
    "design-doc",
    "technical-architecture",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Documentation",
    "Topic :: Software Development",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Typing :: Typed",
]

dependencies = [
    "click>=8.1.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "structlog>=24.0.0",
    "cryptography>=42.0.0",
    "aiohttp>=3.9.0",
    "ollama>=0.1.0",
    "openai>=1.0.0",
    "anthropic>=0.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.20.0",
    "ruff>=0.2.0",
    "black>=24.0.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[project.scripts]
specify = "specify.cli:main"

[project.urls]
Homepage = "https://github.com/specify-ai/specify-ai"
Documentation = "https://github.com/specify-ai/specify-ai#readme"
Repository = "https://github.com/specify-ai/specify-ai.git"
Issues = "https://github.com/specify-ai/specify-ai/issues"

# ─────────────────────────────────────────────────────────────────────────────
# Setuptools Configuration
# ─────────────────────────────────────────────────────────────────────────────

[tool.setuptools.packages.find]
where = [".."]
include = ["specify*"]

[tool.setuptools.package-data]
specify = ["py.typed"]

# ─────────────────────────────────────────────────────────────────────────────
# Ruff Configuration (Linting)
# ─────────────────────────────────────────────────────────────────────────────

[tool.ruff]
target-version = "py311"
line-length = 88
exclude = [
    ".git",
    ".hg",
    ".mypy_cache",
    ".tox",
    ".venv",
    "_build",
    "buck-out",
    "build",
    "dist",
    ".tmp",
    "execution/_template.py",
]

# Enable all rules by default, then disable specific ones
[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by black)
    "B008",   # do not perform function calls in argument defaults
    "B905",   # zip without explicit strict
    "ARG001", # unused function argument (common in callbacks)
    "ARG002", # unused method argument
    "SIM108", # use ternary operator
]

# Allow unused variables when prefixed with underscore
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG", "S101", "TC003", "TC001", "TC002", "W293"]
"__init__.py" = ["F401"]

# ─────────────────────────────────────────────────────────────────────────────
# Black Configuration (Formatting)
# ─────────────────────────────────────────────────────────────────────────────

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | .tmp
)/
'''

# ─────────────────────────────────────────────────────────────────────────────
# MyPy Configuration (Type Checking)
# ─────────────────────────────────────────────────────────────────────────────

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
strict_concatenate = true
show_error_codes = true
show_column_numbers = true
show_error_context = true
pretty = true

# Third-party libraries without type stubs
[[tool.mypy.overrides]]
module = [
    "ollama.*",
    "respx.*",
]
ignore_missing_imports = true

# ─────────────────────────────────────────────────────────────────────────────
# Pytest Configuration
# ─────────────────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# ─────────────────────────────────────────────────────────────────────────────
# Coverage Configuration
# ─────────────────────────────────────────────────────────────────────────────

[tool.coverage.run]
source = ["specify"]
branch = true
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/_template.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@abstractmethod",
]
fail_under = 80
show_missing = true
skip_covered = true

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"
